--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "eslint-plugin-vue": "^8.2.0",
     "jsdom": "^19.0.0",
     "prettier": "^2.5.1",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
     "vite": "^2.8.4",
     "vitest": "^0.5.0"
   }
