--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "dependencies": {
     "axios": "^0.26.1",
     "moment": "^2.29.1",
-    "vue": "^3.2.31",
+    "vue": "3.2.45",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
-    "@vitejs/plugin-vue": "^2.2.2",
+    "@vitejs/plugin-vue": "3.2.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
     "c8": "^7.11.0",
@@ -26,7 +26,7 @@
     "prettier": "^2.5.1",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
-    "vite": "^2.8.4",
+    "vite": "3.2.4",
     "vitest": "^0.5.0"
   }
 }
