--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
-    "moment": "^2.29.1",
+    "moment": "^2.29.4",
     "vue": "3.2.45",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
@@ -26,7 +26,7 @@
     "prettier": "^2.5.1",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
-    "vite": "3.2.4",
+    "vite": "^4.4.7",
     "vitest": "^0.5.0"
   }
 }
